--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -33,7 +33,7 @@
           Browse <input type="file" fileread="data.image_url"/>
         </span>
                   
-        <img ng-if="data.image_url.length > 0" src="{{data.image_url}}" id="imageContainer"  alt="Image preview...">      
+        <img class="img-responsive" ng-if="data.image_url.length > 0" src="{{data.image_url}}" id="imageContainer"  alt="Image preview...">      
         
         <!-- </div> -->
       </div>
