--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -12,7 +12,7 @@
 }
 </script>
 
-<div ng-controller='TaporIndexController' class='tapor-container'>
+<div ng-controller='TaporIndexController' class='tapor-container tapor-home'>
 	<!-- featured -->
 	<div class="row" >
 		<div class="col-md-8" id="tapor-featured-carrousel">
