--- a/app/assets/templates/users/view.html
+++ b/app/assets/templates/users/view.html
@@ -20,7 +20,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 break-content">
               <ul>
                 <li ng-if="profile_user.position_affiliation != ''">
                   {{profile_user.position_affiliation}}
