--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -214,43 +214,44 @@
     <!-- suggested tools -->
       <div nf-if="current_user.is_admin">
 
-      <div class="form-group">
-        <label for="inputCreatorsURL" class="col-sm-2 control-label">Suggested tools</label>
+        <div class="form-group">
+          <label for="inputCreatorsURL" class="col-sm-2 control-label">Suggested tools</label>
 
 
-        <div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              Tools
-            </div>
-            <div class="panel-body">
-
-            <div>
-            <form>
-  
-              <div class="form-group row">
-                <label for="inputPassword" class="col-sm-2 form-control-label">Search</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputQuery" placeholder="Query" ng-model="data.tool_query">
-                </div>
+          <div class="col-md-6">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                Tools
               </div>
-              </form>
-            </div>
+              <div class="panel-body">
 
-              <div class="select-suggested-viewport">
-
-                <div class="row" ng-repeat="tool in data.query_tools">                  
-                  <div class="col-md-12">
-                    <input type="checkbox" name="suggested-{{tool.id}}" value="suggested-{{tool.id}}" id="input-suggested-{{tool.id}}" ng-model="tool.is_suggested" ng-click="set_suggested_tool(tool)">
-                    {{tool.name}}
-                  </div>                  
+              <div>
+              
+                <div class="form-group row">
+                  <div class="col-sm-2">
+                  <label for="inputSearch" class=" form-control-label">Search</label>
+                  </div>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputQuery" placeholder="Query" ng-model="data.tool_query">
+                  </div>
                 </div>
+              
               </div>
 
-            </div>
-          </div>            
+                <div class="select-suggested-viewport">
+
+                  <div class="row" ng-repeat="tool in data.query_tools">                  
+                    <div class="col-md-12">
+                      <input type="checkbox" name="suggested-{{tool.id}}" value="suggested-{{tool.id}}" id="input-suggested-{{tool.id}}" ng-model="tool.is_suggested" ng-click="set_suggested_tool(tool)">
+                      {{tool.name}}
+                    </div>                  
+                  </div>
+                </div>
+
+              </div>
+            </div>            
+          </div>
         </div>
-      </div>
       </div>
     
 <!--        <div class="col-sm-3">
