--- a/app/assets/templates/tool_lists/index.html
+++ b/app/assets/templates/tool_lists/index.html
@@ -10,38 +10,12 @@
 <div class="row">
 	<div class="col-md-12">
 	  <div ng-repeat="tool_list in tool_lists_page.tool_lists">
-	    <div class="row">
-	      <div class="col-md-3">
-	        <div class="row">
-	          <div class="col-md-12">
-	            <a href="/tool_lists/{{tool_list.id}}"><label>{{tool_list.name}}</label></a>
-
-							<div class="checkbox">
-								<label ng-if="current_user.is_admin">
-									<input type="checkbox" ng-model='tool_list.is_featured' ng-change='setFeatureTool(tool_list)'> Featured
-								</label>
-							</div>
-
-	          </div>
-	         </div>
-	         <div class="row">
-	          <div class="col-md-12">
-	            {{tool_list.detail | cutEllipsis : 300}}
-	          </div>
-	         </div>
-	      </div>
-	      <div class="col-md-9 horizontal-scrolling well" >
-	        
-	        <ul class="list-inline list-unstyled">
-	          <li ng-repeat="item in tool_list.tool_list_items">
-	            <a href="/tools/{{item.tool.id}}">
-	              <img src="{{item.tool.thumb_url}}">
-	            </a>
-	          </li>
-	        </ul>
-	        
-	      </div>
-	    </div>
+			<div class="checkbox">
+				<label ng-if="current_user.is_admin">
+					<input type="checkbox" ng-model='tool_list.is_featured' ng-change='setFeatureTool(tool_list)'> Featured
+				</label>
+			</div>
+			<div compressed-list list="tool_list"></div>
 	  </div>
 	</div>
 </div>
