Moved possible languages to the helper service. Added language name reverse name lookup.
Fixes #107

--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -128,7 +128,10 @@
 				<div class="col-md-12">
 					<div class="panel panel-default">
 						<div class="panel-heading">
+							<div>
 							<h3 class="panel-title">Code</h3>
+							</div>
+							<div>{{data.tool.languageName}}</div>
 						</div>
 						<div class="panel-body">
 							<div class="row">
