--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -83,6 +83,17 @@
 			<div class="row">
 				
 				<div class="col-md-8">
+
+					<h1 class="tapor-title">TAPoR 3</h1>
+
+					<p>
+					Welcome to version 3 of the Text Analysis Portal for Research. TAPoR 2 has been discontinued, but all the data is in TAPoR 3 which now also supports exemplary code as tools and the curation of lists of tools and code.
+
+ As TAPoR 3 is a complete rewrite of the code we would appreciate reports of any bugs or suggestions for improvements. 
+
+TAPoR 3 was developed with support from the <a href="http://novel-tm.ca/">Text Mining the Novel Project</a>.
+					</p>
+
 					<h1 class="tapor-title">Curated Tool Lists</h1>
 					<p>
 					Curated lists represent the commonly used or widely respected groups of tools used by leading scholars in the various fields of Digital Humanities. They represent both tried and trusted tools used by DH scholars, or new advancements that offer exciting new possibilities in their field. Curated lists are excellent places to start exploring TAPoR from, and can help with deciding what to include in your own lists.
