Applied changes from production

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -149,7 +149,8 @@ TAPoR 3 was developed with support from the <a href="http://novel-tm.ca/">Text M
 								<h1 class="tapor-title">Latest tools</h1>
 							</div>
 							<div class="col-md-2">
-								<a href="/tools/?sort=desc&order=id">see all</a>
+								<!--<a href="/tools/?sort=desc&order=id">See All</a>-->
+								<a href="/tool_lists">See All</a>
 							</div>
 						</div>
 						<div class="row">
