--- a/app/assets/templates/tool_lists/index.html
+++ b/app/assets/templates/tool_lists/index.html
@@ -10,12 +10,20 @@
 <div class="row">
 	<div class="col-md-12">
 	  <div ng-repeat="tool_list in tool_lists_page.tool_lists">
-			<div class="checkbox">
-				<label ng-if="current_user.is_admin">
-					<input type="checkbox" ng-model='tool_list.is_featured' ng-change='setFeatureTool(tool_list)'> Featured
-				</label>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="checkbox">
+					<label ng-if="current_user.is_admin">
+						<input type="checkbox" ng-model='tool_list.is_featured' ng-change='setFeatureTool(tool_list)'> Featured
+					</label>
+				</div>
 			</div>
-			<div compressed-list list="tool_list"></div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div compressed-list list="tool_list"></div>
+			</div>
+		</div>
 	  </div>
 	</div>
 </div>
