Added correct number of pages after pagination widget Fixes #116

--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -64,7 +64,7 @@
         <!-- pagination -->
         <div class="row">
           <div class="col-md-12">
-            <pagination total-items="tools_page.meta.count" ng-model="page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>  of {{tools_page.meta.count}}
+            <pagination total-items="tools_page.meta.count" ng-model="page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>  of {{tools_page.meta.page_count}}
           </div>
         </div>
 
