--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -50,7 +50,7 @@
 	<div class="row pagination-row">
 		<div class="col-md-6">
 			<pagination total-items="tools_page.meta.count" ng-model="page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination> 
-				<label class="pagination-label"> of {{tools_page.meta.count}}</label>
+				<label class="pagination-label"> of {{tools_page.meta.page_count}}</label>
 		</div>
 <!-- glyphicon-arrow-down -->
 		<div class="col-md-6">
