Small text change on home page Fixes #122

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -150,7 +150,7 @@ TAPoR 3 was developed with support from the <a href="http://novel-tm.ca/">Text M
 							</div>
 							<div class="col-md-2">
 								<!--<a href="/tools/?sort=desc&order=id">See All</a>-->
-								<a href="/tool_lists">See All</a>
+								<a href="/tool_lists">See All Lists</a>
 							</div>
 						</div>
 						<div class="row">
