--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -321,6 +321,7 @@
       <div class="col-sm-offset-2 col-sm-10">
         <button ng-click="createOrUpdateTool()" class="btn btn-primary">Save</button>
         <button ng-if="is_editing" data-toggle="modal" data-target="#deleteModal" class="btn btn-danger">Delete</button>
+        <a href="/home" class="btn btn-danger">Cancel</a>
       </div>
     </div>
 
