Changed layout on home improving the context for “See all lists” link Minor code cleanup
Fixes  #122

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -92,8 +92,7 @@ TAPoR 3 was developed with support from the <a href="http://novel-tm.ca/">Text M
 				</div> -->
 
 				<div class="col-md-4">
-									<!-- latest lists -->
-				
+									<!-- latest lists -->				
 					<div>
 						<h1 class="tapor-title">Latest Lists</h1>
 						<div class='row' ng-repeat='list in latest_lists'>
@@ -106,8 +105,20 @@ TAPoR 3 was developed with support from the <a href="http://novel-tm.ca/">Text M
 									</div>
 								</div>								
 							</div>
-						</div>					
+						</div>
+						<hr>
+						<div class='row'>
+							<div class="col-md-12">
+								<div clas="row">
+									<div class='col-md-12'>
+										<a href="/tool_lists">See All Lists</a>	
+									</div>
+								</div>								
+							</div>
+						</div>
 					</div>
+
+					
 				</div>
 
 
@@ -121,13 +132,12 @@ TAPoR 3 was developed with support from the <a href="http://novel-tm.ca/">Text M
 				<div class="col-md-12">
 
 						<div class="row">
-							<div class="col-md-10">
+							<div class="col-md-12">
 								<h1 class="tapor-title">Latest tools</h1>
 							</div>
-							<div class="col-md-2">
-								<!--<a href="/tools/?sort=desc&order=id">See All</a>-->
+<!-- 							<div class="col-md-2">
 								<a href="/tool_lists">See All Lists</a>
-							</div>
+							</div> -->
 						</div>
 						<div class="row">
 							<div class="col-md-3" ng-repeat="tool in latest_tools">
