--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 			  "url" : "http://www.tapor.ca"
 			}
 		</script>
+		<script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
