Working on new visualization

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -16,7 +16,7 @@
 	<!-- featured -->
 	<div class="row" >
 		<div class="col-md-12">
-			<tool-category-view></tool-category-view>
+			<tool-category-view tools="tools_by_analysis"></tool-category-view>
 		</div>
 	</div>
 
