--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -14,7 +14,7 @@
 
 <div ng-controller='TaporIndexController' class='tapor-container tapor-home'>
 	<!-- featured -->
-	<div class="row" >
+	<div class="row bottom-border" >
 		<div class="col-md-12">
 			<tool-category-view tools="tools_by_analysis"></tool-category-view>
 		</div>
