Added title to visualization

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -14,6 +14,14 @@
 
 <div ng-controller='TaporIndexController' class='tapor-container tapor-home'>
 	<!-- featured -->
+	<div class="row">
+		<div class="col-md-12">
+			<h1 class="tapor-title">
+		 		Browse the TAPoR collection:
+		 	</h1>
+		</div>		
+	</div>
+
 	<div class="row bottom-border" >
 		<div class="col-md-12">
 			<tool-category-view tools="tools_by_analysis"></tool-category-view>
