Make repository clickable

--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -71,7 +71,9 @@
 									Repository
 								</dt>
 								<dd ng-if="data.tool.repository != null">
+									<a href="{{data.tool.repository}}">
 									{{data.tool.repository}}
+									</a>
 								</dd>
 							</dl>
 						</div>
