Add PageMap metadata for tools and tool lists

--- a/app/assets/templates/tool_lists/view.html
+++ b/app/assets/templates/tool_lists/view.html
@@ -1,3 +1,20 @@
+<!--  
+<PageMap>
+	<DataObject type="document">
+		<Attribute name="title">
+			{{data.name}}
+		</Attribute>
+        <Attribute name="author">
+        	{{data.user.name}}
+        </Attribute>
+        <Attribute name="description">
+        	{{data.detail}}
+    	</Attribute>           
+	</DataObject>
+</PageMap>
+-->
+
+
 <div ng-controller='ListsViewController' class='tapor-container'>
 
 	<div class="row">
