--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -1,3 +1,26 @@
+<!--  
+<PageMap>
+	<DataObject type="document">
+		<Attribute name="title">
+			{{data.tool.name}}
+		</Attribute>
+        <Attribute name="author">
+        	{{data.tool.creators_name}}
+        </Attribute>
+        <Attribute name="description">
+        	{{data.tool.detail}}
+    	</Attribute>        
+		<Attribute name="rating">
+			{{data.ratings.system}}
+		</Attribute>      
+	</DataObject>
+	<DataObject type="thumbnail">
+		<Attribute name="src" value="{{data.tool.thumb_url}}" />
+		<Attribute name="width" value="275" />
+		<Attribute name="height" value="220" />
+	</DataObject>
+</PageMap>
+-->
 <div ng-controller='ToolsViewController' class='tapor-container'>
 
 	<div class="row">
