Testing ld+json

--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -21,6 +21,23 @@
 	</DataObject>
 </PageMap>
 -->
+
+
+		<script type="application/ld+json">
+			{
+			  "@context" : "http://schema.org",
+			  "@type" : "WebSite",
+			  "name" : "TAPoR",
+			  "alternateName" : "Text Analysis Portal for Research",
+			  "url" : "http://www.tapor.ca",
+			  "potentialAction": {
+				"@type": "SearchAction",
+    			"target": "http://tapor.ca/tools?query={search_term_string}",
+    			"query-input": "required name=search_term_string"
+  			  }
+			}
+		</script>
+
 <div ng-controller='ToolsViewController' class='tapor-container'>
 
 	<div class="row">
