--- a/app/assets/templates/tool_lists/view.html
+++ b/app/assets/templates/tool_lists/view.html
@@ -1,30 +1,13 @@
-<!--  
-<PageMap>
-	<DataObject type="document">
-		<Attribute name="title">
-			{{data.name}}
-		</Attribute>
-        <Attribute name="author">
-        	{{data.user.name}}
-        </Attribute>
-        <Attribute name="description">
-        	{{data.detail}}
-    	</Attribute>           
-	</DataObject>
-</PageMap>
--->
-
-
 <div ng-controller='ListsViewController' class='tapor-container'>
 
-	<div class="row">
+	<div class="row" itemscope itemtype="http://schema.org/Product">
 		<!-- left content -->
 		<div class="col-md-9">
 			<div class="panel panel-default">
 			  <div class="panel-heading">
 			    	<div class="row">
 							<div class="col-sm-10">
-							<h1>{{data.name}}</h1>
+							<h1 itemprop="name">{{data.name}}</h1>
 							</div>
 							<div class="col-sm-2">
 								<a ng-if="can_edit" href="/tool_lists/edit/{{data.id}}" class="btn btn-primary">Edit</a>
@@ -32,7 +15,7 @@
 						</div>
 			  </div>
 			  <div class="panel-body">
-			  	<div class="well">
+			  	<div class="well" itemprop="description">
 			  		{{data.detail}}
 			  	</div>
 			    
