Add last updated field for structured data tools and tool lists

--- a/app/assets/templates/tool_lists/view.html
+++ b/app/assets/templates/tool_lists/view.html
@@ -19,6 +19,10 @@
 			  		{{data.detail}}
 			  	</div>
 			    
+				<div hidden>
+					<span itemprop="last_update">{{data.last_updated}}</span>
+				</div>
+
 			  	<div class="well" ng-repeat="item in data.tool_list_items">
 
 			  		<div class="row">
