Add recipe attribute to Tool model
The recipe attribute will be used as a rich text entry to add extra information to each tool. This extra information could potentially be used as a list of links to recipes where the tool is used.

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -122,6 +122,15 @@
       </div>
     </div>
 
+    <!-- Recipes -->
+
+    <div class="form-group">
+      <label for="inputRecipes" class="col-sm-2 control-label">Recipes</label>
+      <div class="col-sm-6  ">
+        <textarea ui-tinymce="tinymceOptions" ng-model="data.recipes"></textarea>
+      </div>
+    </div>
+
     <!-- approved -->
 
     <div class="form-group" nf-if="current_user.is_admin">
