--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -304,6 +304,21 @@
 				</div>
 			</div>
 
+			
+			<!-- Recipes -->
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title">Recipes</h3>
+						</div>
+						<div class="panel-body" ng-bind-html="data.tool.recipes">
+							
+						</div>
+					</div>
+				</div>
+			</div>
+
 
 		</div>
 	</div>
