Update Recipes label to "Methods Commons Recipes"
Simple change in label and layout for tool views
Fixes #139

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -125,7 +125,7 @@
     <!-- Recipes -->
 
     <div class="form-group">
-      <label for="inputRecipes" class="col-sm-2 control-label">Recipes</label>
+      <label for="inputRecipes" class="col-sm-2 control-label">Methods Commons Recipes</label>
       <div class="col-sm-6  ">
         <textarea ui-tinymce="tinymceOptions" ng-model="data.recipes"></textarea>
       </div>
