--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -277,6 +277,20 @@
 				</div>
 			</div>
 
+			<!-- Recipes -->
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title">Methods Commons Recipes</h3>
+						</div>
+						<div class="panel-body" ng-bind-html="data.tool.recipes">
+							
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<!-- People also accessed -->
 			<div class="row">
 				<div class="col-md-12">
@@ -305,19 +319,7 @@
 			</div>
 
 			
-			<!-- Recipes -->
-			<div class="row">
-				<div class="col-md-12">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title">Recipes</h3>
-						</div>
-						<div class="panel-body" ng-bind-html="data.tool.recipes">
-							
-						</div>
-					</div>
-				</div>
-			</div>
+
 
 
 		</div>
