Add raster logo
Fix #135

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,6 +1,7 @@
 <div class="row" id="tapor-footer">
 	<div class="col-md-2 tapor-logo">
-		<h3>TAPoR 3</h3>
+		<!-- <h3>TAPoR 3</h3> -->
+		<img src="/img/tapor/TAPoR_Logo_Small_White.png" />
 	</div>
 	<div class="col-md-10">
 		<p>TAPoR has been supported by the University of Alberta, McMaster University, the Canada Foundation for Innovation, Compute Canada and the Social Science and Humanities Research Council of Canada</p>
