--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,10 @@
 <div class="row" id="tapor-header">
 	<div class="col-md-2">
-		<div class="tapor-logo"><h1><a href='/'>TAPoR 3</a></h1></div>
+		<div class="tapor-logo">			
+			<a href='/'>
+				<img src="/img/tapor/TAPoR_Logo_Medium_Blue.png" />
+			</a>
+		</div>
 	</div>
 	<div class="col-md-8 tapor-blue" id="tapor-tagline">
 		<h1>Discover research tools for studying texts.</h1>
