Add google analytics tracking code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,9 @@
     			"query-input": "required name=search_term_string"
   			  }
 			}
-
-
 		</script>
 
+		<%= raw Rails.application.config.google_analytics %>
 		<script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
 	</head>
 	<body>
